[package]
name = "bevy_lint"
version = "0.1.0"
authors = ["MinerSebas <scherthan_sebastian@web.de>"]
description = "Provides Lints for Bevy Code"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", tag = "rust-1.58.0" }
dylint_linting = "2.0.9"
if_chain = "1.0.2"
either = "1.6.1"
itertools = "0.10.3"


[dev-dependencies]
dylint_testing = "2.0.9"
bevy = { version = "0.6", default-features = false }

[package.metadata.rust-analyzer]
rustc_private = true

[[example]]
name = "insert_resource_with_default"
path = "ui/app_lints/insert_resource_with_default.rs"

[[example]]
name = "bundle_with_incomplete_transforms"
path = "ui/bundle_lints/bundle_with_incomplete_transforms.rs"

[[example]]
name = "multiple_labels_on_type"
path = "ui/label_lints/multiple_labels_on_type.rs"

[[example]]
name = "str_label"
path = "ui/label_lints/str_label.rs"

[[example]]
name = "empty_query"
path = "ui/system_lints/empty_query.rs"

[[example]]
name = "filter_in_world_query"
path = "ui/system_lints/filter_in_world_query.rs"

[[example]]
name = "unnecessary_change_detection_filters"
path = "ui/system_lints/unnecessary_change_detection_filters.rs"

[[example]]
name = "unnecessary_option"
path = "ui/system_lints/unnecessary_option.rs"

[[example]]
name = "unnecessary_or"
path = "ui/system_lints/unnecessary_or.rs"

[[example]]
name = "unnecessary_with"
path = "ui/system_lints/unnecessary_with.rs"
