[package]
name = "bevy_lint"
version = "0.1.0"
authors = ["MinerSebas <scherthan_sebastian@web.de>"]
description = "Provides Lints for Bevy Code"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "ac4c2094a6030530661bee3876e0228ddfeb6b8b" }
dylint_linting = "2.6.1"
if_chain = "1.0.2"
either = "1.9.0"
itertools = "0.12.1"


[dev-dependencies]
dylint_testing = "2.6.1"
bevy = { version = "0.12.1", default-features = false }

[package.metadata.rust-analyzer]
rustc_private = true

[[example]]
name = "insert_resource_with_default"
path = "ui/app_lints/insert_resource_with_default.rs"

[[example]]
name = "bundle_with_incomplete_transforms"
path = "ui/bundle_lints/bundle_with_incomplete_transforms.rs"

[[example]]
name = "empty_query"
path = "ui/system_lints/empty_query.rs"

[[example]]
name = "filter_in_world_query"
path = "ui/system_lints/filter_in_world_query.rs"

[[example]]
name = "unnecessary_change_detection_filters"
path = "ui/system_lints/unnecessary_change_detection_filters.rs"

[[example]]
name = "unnecessary_option"
path = "ui/system_lints/unnecessary_option.rs"

[[example]]
name = "unnecessary_or"
path = "ui/system_lints/unnecessary_or.rs"

[[example]]
name = "unnecessary_with"
path = "ui/system_lints/unnecessary_with.rs"
